# zenndi-auth

./: GUIA_ACT.md  Makefile  README.md  docker-compose.ci.yml  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  pyproject.toml  settings.toml
.github/workflows/: ci.yml
alembic/: env.py
app/: main.py
app/api/v1/auth/: dependencies.py  routes.py  schemas.py  services.py
app/api/v1/metrics/: routes.py
app/core/: config.py  database.py  lifespan.py  logging.py  metrics.py  network_utils.py  rate_limiter.py  request_id.py
app/core/middlewares/: logging_middleware.py  metrics_middleware.py  rate_limit_middleware.py
app/mixins/: mixins.py  sync_mixins.py
app/models/: auth_session.py  backup_code.py  login_attempt.py  user.py
app/shared/interfaces/: repository_interface.py
app/shared/repositories/: base.py
app/shared/schemas/: base.py
app/shared/services/: email_service.py  security.py
app/utils/: date_utils.py
monitoring/: prometheus.yml
