[project]
name = "zenndi-auth"
version = "0.1.0"
description = "Authentication and Authorization Service for Zenndi"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.121.1",
    "uvicorn>=0.38.0",
    "gunicorn>=22.0.0",
    "aiosqlite>=0.21.0",
    "psycopg2-binary>=2.9.11",
    "asyncpg>=0.30.0",
    "dynaconf>=3.2.12",
    "sqlalchemy>=2.0.44",
    "slowapi>=0.1.9",
    "python-jose[cryptography]>=3.5.0",
    "qrcode[pil]>=8.2",
    "pyotp>=2.9.0",
    "fastapi-mail>=1.5.8",
    "reportlab>=4.4.4",
    "passlib[argon2,bcrypt]>=1.7.4",
    "loguru>=0.7.3",
    "prometheus-client>=0.23.1",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "psutil>=7.1.3",
    "sentry-sdk[fastapi,sqlalchemy]>=2.44.0",
    "redis[hiredis]>=5.0.0",
    "alembic>=1.17.2",
]

[project.optional-dependencies]
dev = [
    "aiosqlite>=0.21.0",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "questionary>=2.1.1",
    "rich>=14.2.0",
    "ruff>=0.14.5",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
